external-crates/move/crates/move-compiler/tests/move_check/parser/function_acquires_bad_name.move
module 0x42::M {
    // Test for an invalid (i.e., missing) resource name
    fun f() acquires {
    }
}
